--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i": "^0.3.7",
     "npm": "^9.6.4",
     "or": "^0.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
