SQLAlchemy & Blueprints attempt DO NOT MERGE INTO MASTER

--- a/setup_infra/docker-compose.yml
+++ b/setup_infra/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   backend:
     image: docker.io/python:3.9.16
-    command: bash -c "pip3 install flask flask_mysqldb flask_cors pyjwt; python3 /backend/backend.py"
+    command: bash -c "pip3 install flask flask_sqlalchemy flask_mysqldb flask_cors pyjwt; python3 /backend/backend.py"
     restart: unless-stopped
     volumes: 
       - ../backend_python:/backend
